# django-core

./: .flake8  .gitignore  Dockerfile  Makefile  README.rst  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/: manage.py
core/config/settings/: __init__.py  base.py  custom.py  envvars.py
core/core/utils/: collections.py  misc.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py  settings.sample.dev.py
local/: settings.dev.py
scripts/: entrypoint.sh  production_data.py
tutorial/: manage.py
tutorial/general/utils/: collections.py  cryptography.py
tutorial/project/: urls.py
tutorial/project/settings/: __init__.py  base.py  envvars.py
tutorial/project/settings/templates/: settings.sample.dev.py
