[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Ali Farrokhtala <farrokhtala@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
# psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.7"
django-filter = "^23.2"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
